--- a/advanced_usage.html
+++ b/advanced_usage.html
@@ -180,7 +180,7 @@
 </code></pre>
 <p>Put the following in Cargo.toml:</p>
 <pre><code class="language-toml">[dependencies]
-lindera = { version = "1.2.0", features = ["embed-ipadic"] }
+lindera = { version = "2.1.1", features = ["embed-ipadic"] }
 </code></pre>
 <p>For example:</p>
 <pre><code class="language-shell">% cat ./resources/user_dict/ipadic_simple_userdic.csv
@@ -253,7 +253,7 @@ token:  です    助動詞,*,*,*,特殊・デス,基本形,です,デス,デス
 <h2 id="tokenize-with-filters"><a class="header" href="#tokenize-with-filters">Tokenize with filters</a></h2>
 <p>Put the following in Cargo.toml:</p>
 <pre><code class="language-toml">[dependencies]
-lindera = { version = "1.2.0", features = ["embed-ipadic"] }
+lindera = { version = "2.1.1", features = ["embed-ipadic"] }
 </code></pre>
 <p>This example covers the basic usage of Lindera Analysis Framework.</p>
 <p>It will:</p>
@@ -365,7 +365,7 @@ fn main() -&gt; LinderaResult&lt;()&gt; {
 </code></pre>
 <p>You can see the result as follows:</p>
 <pre><code class="language-text">text: Ｌｉｎｄｅｒａは形態素解析ｴﾝｼﾞﾝです。ユーザー辞書も利用可能です。
-token: "Lindera", start: 0, end: 21, details: Some(["UNK"])
+token: "Lindera", start: 0, end: 21, details: Some(["名詞", "固有名詞", "組織", "*", "*", "*", "*", "*", "*"])
 token: "形態素", start: 24, end: 33, details: Some(["名詞", "一般", "*", "*", "*", "*", "形態素", "ケイタイソ", "ケイタイソ"])
 token: "解析", start: 33, end: 39, details: Some(["名詞", "サ変接続", "*", "*", "*", "*", "解析", "カイセキ", "カイセキ"])
 token: "エンジン", start: 39, end: 54, details: Some(["名詞", "一般", "*", "*", "*", "*", "エンジン", "エンジン", "エンジン"])
