--- a/ja/advanced_usage.html
+++ b/ja/advanced_usage.html
@@ -180,7 +180,7 @@
 </code></pre>
 <p>Cargo.tomlに以下を追加してください：</p>
 <pre><code class="language-toml">[dependencies]
-lindera = { version = "1.2.0", features = ["embed-ipadic"] }
+lindera = { version = "2.1.1", features = ["embed-ipadic"] }
 </code></pre>
 <p>例：</p>
 <pre><code class="language-shell">% cat ./resources/user_dict/ipadic_simple_userdic.csv
@@ -253,7 +253,7 @@ token:  です    助動詞,*,*,*,特殊・デス,基本形,です,デス,デス
 <h2 id="フィルタを使用したトークナイズ"><a class="header" href="#フィルタを使用したトークナイズ">フィルタを使用したトークナイズ</a></h2>
 <p>Cargo.tomlに以下を追加してください：</p>
 <pre><code class="language-toml">[dependencies]
-lindera = { version = "1.2.0", features = ["embed-ipadic"] }
+lindera = { version = "2.1.1", features = ["embed-ipadic"] }
 </code></pre>
 <p>この例では、Lindera解析フレームワークの基本的な使い方を説明します。</p>
 <p>以下の処理を行います：</p>
@@ -365,7 +365,7 @@ fn main() -&gt; LinderaResult&lt;()&gt; {
 </code></pre>
 <p>実行結果は以下のようになります：</p>
 <pre><code class="language-text">text: Ｌｉｎｄｅｒａは形態素解析ｴﾝｼﾞﾝです。ユーザー辞書も利用可能です。
-token: "Lindera", start: 0, end: 21, details: Some(["UNK"])
+token: "Lindera", start: 0, end: 21, details: Some(["名詞", "固有名詞", "組織", "*", "*", "*", "*", "*", "*"])
 token: "形態素", start: 24, end: 33, details: Some(["名詞", "一般", "*", "*", "*", "*", "形態素", "ケイタイソ", "ケイタイソ"])
 token: "解析", start: 33, end: 39, details: Some(["名詞", "サ変接続", "*", "*", "*", "*", "解析", "カイセキ", "カイセキ"])
 token: "エンジン", start: 39, end: 54, details: Some(["名詞", "一般", "*", "*", "*", "*", "エンジン", "エンジン", "エンジン"])
