--- a/ja/advanced_usage.html
+++ b/ja/advanced_usage.html
@@ -374,6 +374,73 @@ token: "辞書", start: 75, end: 81, details: Some(["名詞", "一般", "*", "*"
 token: "利用", start: 84, end: 90, details: Some(["名詞", "サ変接続", "*", "*", "*", "*", "利用", "リヨウ", "リヨー"])
 token: "可能", start: 90, end: 96, details: Some(["名詞", "形容動詞語幹", "*", "*", "*", "*", "可能", "カノウ", "カノー"])
 </code></pre>
+<h2 id="n-best-トークナイズ"><a class="header" href="#n-best-トークナイズ">N-Best トークナイズ</a></h2>
+<p>Linderaは N-Best トークナイズをサポートしており、パスの総コスト順（低コスト＝高精度）に上位 N 件のトークナイズ候補を列挙します。これは MeCab の N-Best 実装と互換性のある Forward-DP Backward-A* アルゴリズムに基づいています。</p>
+<h3 id="基本的な-n-best-の使い方"><a class="header" href="#基本的な-n-best-の使い方">基本的な N-Best の使い方</a></h3>
+<p>Cargo.tomlに以下を追加してください：</p>
+<pre><code class="language-toml">[dependencies]
+lindera = { version = "2.1.1", features = ["embed-ipadic"] }
+</code></pre>
+<pre><pre class="playground"><code class="language-rust">use lindera::dictionary::load_dictionary;
+use lindera::mode::Mode;
+use lindera::segmenter::Segmenter;
+use lindera::tokenizer::Tokenizer;
+use lindera::LinderaResult;
+
+fn main() -&gt; LinderaResult&lt;()&gt; {
+    let dictionary = load_dictionary("embedded://ipadic")?;
+    let segmenter = Segmenter::new(Mode::Normal, dictionary, None);
+    let tokenizer = Tokenizer::new(segmenter);
+
+    let text = "すもももももももものうち";
+
+    // 上位3件のトークナイズ結果を取得
+    let results = tokenizer.tokenize_nbest(text, 3, false, None)?;
+
+    for (rank, (tokens, cost)) in results.iter().enumerate() {
+        println!("--- NBEST {} (cost={}) ---", rank + 1, cost);
+        for token in tokens {
+            let details = token.details().join(",");
+            println!("{}\t{}", token.surface.as_ref(), details);
+        }
+    }
+
+    Ok(())
+}</code></pre></pre>
+<p>出力:</p>
+<pre><code class="language-text">--- NBEST 1 (cost=7546) ---
+すもも  名詞,一般,*,*,*,*,すもも,スモモ,スモモ
+も      助詞,係助詞,*,*,*,*,も,モ,モ
+もも    名詞,一般,*,*,*,*,もも,モモ,モモ
+も      助詞,係助詞,*,*,*,*,も,モ,モ
+もも    名詞,一般,*,*,*,*,もも,モモ,モモ
+の      助詞,連体化,*,*,*,*,の,ノ,ノ
+うち    名詞,非自立,副詞可能,*,*,*,うち,ウチ,ウチ
+--- NBEST 2 (cost=7914) ---
+...
+</code></pre>
+<h3 id="ユニーク結果とコスト閾値を使用した-n-best"><a class="header" href="#ユニーク結果とコスト閾値を使用した-n-best">ユニーク結果とコスト閾値を使用した N-Best</a></h3>
+<p><code>tokenize_nbest</code> メソッドは以下のパラメータを受け取ります:</p>
+<ul>
+<li><code>text</code>: トークナイズするテキスト。</li>
+<li><code>n</code>: 返す N-best 結果の数。</li>
+<li><code>unique</code>: <code>true</code> の場合、同じ分割（同じ単語境界位置）を生成する結果の重複を排除します。</li>
+<li><code>cost_threshold</code>: <code>Some(threshold)</code> の場合、<code>best_cost + threshold</code> 以内のコストを持つパスのみを返します。</li>
+</ul>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>// コスト閾値5000以内のユニークな上位10件を取得
+let results = tokenizer.tokenize_nbest(text, 10, true, Some(5000))?;
+<span class="boring">}</span></code></pre></pre>
+<h3 id="lattice-を再利用した-n-best"><a class="header" href="#lattice-を再利用した-n-best">Lattice を再利用した N-Best</a></h3>
+<p>繰り返しトークナイズを行う場合、<code>Lattice</code> を再利用してメモリ割り当てを削減できます:</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>use lindera_dictionary::viterbi::Lattice;
+
+let mut lattice = Lattice::default();
+let results = tokenizer.tokenize_nbest_with_lattice(text, &amp;mut lattice, 3, false, None)?;
+<span class="boring">}</span></code></pre></pre>
 <h2 id="辞書の学習実験的機能"><a class="header" href="#辞書の学習実験的機能">辞書の学習（実験的機能）</a></h2>
 <p>Linderaは、カスタム形態素解析モデルを作成するためのCRFベースの辞書学習機能を提供しています。</p>
 <h3 id="概要"><a class="header" href="#概要">概要</a></h3>
