--- a/ja/cli.html
+++ b/ja/cli.html
@@ -758,6 +758,77 @@ EOS
   }
 ]
 </code></pre>
+<h2 id="n-best-トークナイズ"><a class="header" href="#n-best-トークナイズ">N-Best トークナイズ</a></h2>
+<p>Linderaは N-Best トークナイズをサポートしており、コスト順（低コスト＝高精度）に上位 N 件のトークナイズ候補を返します。これは MeCab の N-Best 実装と互換性のある Forward-DP Backward-A* アルゴリズムに基づいています。</p>
+<h3 id="n-best-パラメータ"><a class="header" href="#n-best-パラメータ">N-Best パラメータ</a></h3>
+<ul>
+<li><code>--nbest</code> / <code>-N</code>: 返す N-best 結果の数（デフォルト: 1）。2 以上に設定すると N-best 出力が有効になります。</li>
+<li><code>--nbest-unique</code>: 同じ分割を生成するパスの重複を排除します。同じ位置で分割される異なるトークナイズは1つにまとめられます。</li>
+<li><code>--nbest-cost-threshold</code>: 最良パスからの最大コスト差。<code>best_cost + threshold</code> 以内のコストを持つパスのみが返されます。ありそうにないトークナイズを除外するのに便利です。</li>
+</ul>
+<h3 id="基本的な-n-best-の例"><a class="header" href="#基本的な-n-best-の例">基本的な N-Best の例</a></h3>
+<pre><code class="language-shell">% echo "すもももももももものうち" | lindera tokenize \
+  --dict embedded://ipadic \
+  -N 3
+</code></pre>
+<pre><code class="language-text">NBEST 1 (cost=7546)
+すもも  名詞,一般,*,*,*,*,すもも,スモモ,スモモ
+も      助詞,係助詞,*,*,*,*,も,モ,モ
+もも    名詞,一般,*,*,*,*,もも,モモ,モモ
+も      助詞,係助詞,*,*,*,*,も,モ,モ
+もも    名詞,一般,*,*,*,*,もも,モモ,モモ
+の      助詞,連体化,*,*,*,*,の,ノ,ノ
+うち    名詞,非自立,副詞可能,*,*,*,うち,ウチ,ウチ
+EOS
+NBEST 2 (cost=7914)
+すもも  名詞,一般,*,*,*,*,すもも,スモモ,スモモ
+も      助詞,係助詞,*,*,*,*,も,モ,モ
+もも    名詞,一般,*,*,*,*,もも,モモ,モモ
+もも    名詞,一般,*,*,*,*,もも,モモ,モモ
+の      助詞,連体化,*,*,*,*,の,ノ,ノ
+うち    名詞,非自立,副詞可能,*,*,*,うち,ウチ,ウチ
+EOS
+NBEST 3 (cost=10060)
+すもも  名詞,一般,*,*,*,*,すもも,スモモ,スモモ
+も      助詞,係助詞,*,*,*,*,も,モ,モ
+もも    名詞,一般,*,*,*,*,もも,モモ,モモ
+も      助詞,係助詞,*,*,*,*,も,モ,モ
+も      助詞,係助詞,*,*,*,*,も,モ,モ
+の      助詞,連体化,*,*,*,*,の,ノ,ノ
+うち    名詞,非自立,副詞可能,*,*,*,うち,ウチ,ウチ
+EOS
+</code></pre>
+<h3 id="ユニーク結果を使用した-n-best"><a class="header" href="#ユニーク結果を使用した-n-best">ユニーク結果を使用した N-Best</a></h3>
+<p>同じ分割が複数のパスに現れる場合（内部的な Viterbi 状態のみが異なる場合）、<code>--nbest-unique</code> を使用して重複を排除します:</p>
+<pre><code class="language-shell">% echo "営業部長谷川です" | lindera tokenize \
+  --dict embedded://ipadic \
+  -N 5 --nbest-unique -o wakati
+</code></pre>
+<pre><code class="language-text">NBEST 1 (cost=15760)
+営業 部長 谷川 です
+NBEST 2 (cost=17758)
+営業 部長 谷 川 です
+NBEST 3 (cost=18816)
+営業 部 長谷川 です
+NBEST 4 (cost=19320)
+営業 部長 谷川 で す
+NBEST 5 (cost=20814)
+営業 部 長谷 川 です
+</code></pre>
+<h3 id="コスト閾値を使用した-n-best"><a class="header" href="#コスト閾値を使用した-n-best">コスト閾値を使用した N-Best</a></h3>
+<p><code>--nbest-cost-threshold</code> を使用して、最良パスから一定のコスト範囲内の結果に制限します:</p>
+<pre><code class="language-shell">% echo "営業部長谷川です" | lindera tokenize \
+  --dict embedded://ipadic \
+  -N 10 --nbest-unique --nbest-cost-threshold 5000 -o wakati
+</code></pre>
+<pre><code class="language-text">NBEST 1 (cost=15760)
+営業 部長 谷川 です
+NBEST 2 (cost=17758)
+営業 部長 谷 川 です
+NBEST 3 (cost=18816)
+営業 部 長谷川 です
+</code></pre>
+<p>残りの候補は <code>15760 + 5000 = 20760</code> を超えるため、3 件の結果のみが返されます。</p>
 <h2 id="高度なトークナイズ"><a class="header" href="#高度なトークナイズ">高度なトークナイズ</a></h2>
 <p>Linderaは、文字フィルタ、トークナイザー、トークンフィルタを組み合わせた分析フレームワークを提供します。フィルタはJSONを使用して構成します。</p>
 <h3 id="文字フィルタとトークンフィルタの使用"><a class="header" href="#文字フィルタとトークンフィルタの使用">文字フィルタとトークンフィルタの使用</a></h3>
